--- a/notebook/1 . EDA STUDENT PERFORMANCE .ipynb
+++ b/notebook/1 . EDA STUDENT PERFORMANCE .ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "7eaae1d7",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "57907087",
    "metadata": {},
    "outputs": [],
@@ -188,8 +188,8 @@
        "</div>"
       ],
       "text/plain": [
-       "   gender race_ethnicity parental_level_of_education         lunch   \n",
-       "0  female        group B           bachelor's degree      standard  \\\n",
+       "   gender race_ethnicity parental_level_of_education         lunch  \\\n",
+       "0  female        group B           bachelor's degree      standard   \n",
        "1  female        group C                some college      standard   \n",
        "2  female        group B             master's degree      standard   \n",
        "3    male        group A          associate's degree  free/reduced   \n",
@@ -449,20 +449,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "76c608dc",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m df\u001b[39m.\u001b[39mdescribe()\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>math_score</th>\n",
+       "      <th>reading_score</th>\n",
+       "      <th>writing_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1000.00000</td>\n",
+       "      <td>1000.000000</td>\n",
+       "      <td>1000.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>66.08900</td>\n",
+       "      <td>69.169000</td>\n",
+       "      <td>68.054000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>15.16308</td>\n",
+       "      <td>14.600192</td>\n",
+       "      <td>15.195657</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>17.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>57.00000</td>\n",
+       "      <td>59.000000</td>\n",
+       "      <td>57.750000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>66.00000</td>\n",
+       "      <td>70.000000</td>\n",
+       "      <td>69.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>77.00000</td>\n",
+       "      <td>79.000000</td>\n",
+       "      <td>79.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>100.00000</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>100.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       math_score  reading_score  writing_score\n",
+       "count  1000.00000    1000.000000    1000.000000\n",
+       "mean     66.08900      69.169000      68.054000\n",
+       "std      15.16308      14.600192      15.195657\n",
+       "min       0.00000      17.000000      10.000000\n",
+       "25%      57.00000      59.000000      57.750000\n",
+       "50%      66.00000      70.000000      69.000000\n",
+       "75%      77.00000      79.000000      79.000000\n",
+       "max     100.00000     100.000000     100.000000"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -612,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "b9081742",
    "metadata": {},
    "outputs": [
@@ -620,18 +704,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Categories in 'gender' variable:      "
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mCategories in \u001b[39m\u001b[39m'\u001b[39m\u001b[39mgender\u001b[39m\u001b[39m'\u001b[39m\u001b[39m variable:     \u001b[39m\u001b[39m\"\u001b[39m,end\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m \u001b[39m\u001b[39m\"\u001b[39m )\n\u001b[1;32m----> 2\u001b[0m \u001b[39mprint\u001b[39m(df[\u001b[39m'\u001b[39m\u001b[39mgender\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39munique())\n\u001b[0;32m      4\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mCategories in \u001b[39m\u001b[39m'\u001b[39m\u001b[39mrace_ethnicity\u001b[39m\u001b[39m'\u001b[39m\u001b[39m variable:  \u001b[39m\u001b[39m\"\u001b[39m,end\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m \u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      5\u001b[0m \u001b[39mprint\u001b[39m(df[\u001b[39m'\u001b[39m\u001b[39mrace_ethnicity\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39munique())\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
+      "Categories in 'gender' variable:      ['female' 'male']\n",
+      "Categories in 'race_ethnicity' variable:   ['group B' 'group C' 'group A' 'group D' 'group E']\n",
+      "Categories in'parental level of education' variable: [\"bachelor's degree\" 'some college' \"master's degree\" \"associate's degree\"\n",
+      " 'high school' 'some high school']\n",
+      "Categories in 'lunch' variable:      ['standard' 'free/reduced']\n",
+      "Categories in 'test preparation course' variable:      ['none' 'completed']\n"
      ]
     }
    ],
