--- a/notebook/2. MODEL TRAINING.ipynb
+++ b/notebook/2. MODEL TRAINING.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "b080dfb2",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
     "from sklearn.metrics import r2_score, mean_absolute_error, mean_squared_error\n",
     "from sklearn.model_selection import RandomizedSearchCV\n",
     "from catboost import CatBoostRegressor\n",
-    "from xgboost import XGBRegressor\n",
+    "#from xgboost import XGBRegressor\n",
     "import warnings"
    ]
   },
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "e11c6255",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "e7e412a2",
    "metadata": {},
    "outputs": [
@@ -183,7 +183,7 @@
        "4                    none          76             78             75  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "56d72fde",
    "metadata": {},
    "outputs": [],
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "cd613177",
    "metadata": {},
    "outputs": [
@@ -317,7 +317,7 @@
        "4                    none             78             75  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "id": "f237ea14",
    "metadata": {},
    "outputs": [
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "id": "924b7f9d",
    "metadata": {},
    "outputs": [],
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "id": "ffc69816",
    "metadata": {},
    "outputs": [
@@ -395,7 +395,7 @@
        "Name: math_score, Length: 1000, dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "id": "1e290fe3",
    "metadata": {},
    "outputs": [],
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "id": "9c68f99a",
    "metadata": {},
    "outputs": [],
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "id": "72459f1d",
    "metadata": {},
    "outputs": [
@@ -451,7 +451,7 @@
        "(1000, 19)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "id": "ed5c4e99",
    "metadata": {},
    "outputs": [
@@ -472,7 +472,7 @@
        "((800, 19), (200, 19))"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "id": "8c247bd0",
    "metadata": {},
    "outputs": [],
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "id": "79ccb8e7",
    "metadata": {
     "scrolled": false
@@ -521,14 +521,14 @@
      "text": [
       "Linear Regression\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 5.3243\n",
-      "- Mean Absolute Error: 4.2671\n",
-      "- R2 Score: 0.8743\n",
+      "- Root Mean Squared Error: 5.3245\n",
+      "- Mean Absolute Error: 4.2687\n",
+      "- R2 Score: 0.8742\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 5.3960\n",
-      "- Mean Absolute Error: 4.2158\n",
-      "- R2 Score: 0.8803\n",
+      "- Root Mean Squared Error: 5.3992\n",
+      "- Mean Absolute Error: 4.2181\n",
+      "- R2 Score: 0.8802\n",
       "===================================\n",
       "\n",
       "\n",
@@ -560,14 +560,14 @@
       "\n",
       "K-Neighbors Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 5.7077\n",
-      "- Mean Absolute Error: 4.5167\n",
-      "- R2 Score: 0.8555\n",
+      "- Root Mean Squared Error: 5.7091\n",
+      "- Mean Absolute Error: 4.5175\n",
+      "- R2 Score: 0.8554\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 7.2530\n",
-      "- Mean Absolute Error: 5.6210\n",
-      "- R2 Score: 0.7838\n",
+      "- Root Mean Squared Error: 7.2583\n",
+      "- Mean Absolute Error: 5.6370\n",
+      "- R2 Score: 0.7835\n",
       "===================================\n",
       "\n",
       "\n",
@@ -578,35 +578,22 @@
       "- R2 Score: 0.9997\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 7.6371\n",
-      "- Mean Absolute Error: 6.0250\n",
-      "- R2 Score: 0.7603\n",
+      "- Root Mean Squared Error: 7.7656\n",
+      "- Mean Absolute Error: 6.2250\n",
+      "- R2 Score: 0.7522\n",
       "===================================\n",
       "\n",
       "\n",
       "Random Forest Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 2.2851\n",
-      "- Mean Absolute Error: 1.8253\n",
-      "- R2 Score: 0.9768\n",
+      "- Root Mean Squared Error: 2.2971\n",
+      "- Mean Absolute Error: 1.8417\n",
+      "- R2 Score: 0.9766\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 6.0959\n",
-      "- Mean Absolute Error: 4.7194\n",
-      "- R2 Score: 0.8473\n",
-      "===================================\n",
-      "\n",
-      "\n",
-      "XGBRegressor\n",
-      "Model performance for Training set\n",
-      "- Root Mean Squared Error: 0.9087\n",
-      "- Mean Absolute Error: 0.6148\n",
-      "- R2 Score: 0.9963\n",
-      "----------------------------------\n",
-      "Model performance for Test set\n",
-      "- Root Mean Squared Error: 6.5889\n",
-      "- Mean Absolute Error: 5.0844\n",
-      "- R2 Score: 0.8216\n",
+      "- Root Mean Squared Error: 6.0020\n",
+      "- Mean Absolute Error: 4.6259\n",
+      "- R2 Score: 0.8520\n",
       "===================================\n",
       "\n",
       "\n",
@@ -625,14 +612,14 @@
       "\n",
       "AdaBoost Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 5.7843\n",
-      "- Mean Absolute Error: 4.7564\n",
-      "- R2 Score: 0.8516\n",
+      "- Root Mean Squared Error: 5.8349\n",
+      "- Mean Absolute Error: 4.7918\n",
+      "- R2 Score: 0.8490\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 6.0447\n",
-      "- Mean Absolute Error: 4.6813\n",
-      "- R2 Score: 0.8498\n",
+      "- Root Mean Squared Error: 6.0162\n",
+      "- Mean Absolute Error: 4.7123\n",
+      "- R2 Score: 0.8513\n",
       "===================================\n",
       "\n",
       "\n"
@@ -647,7 +634,7 @@
     "    \"K-Neighbors Regressor\": KNeighborsRegressor(),\n",
     "    \"Decision Tree\": DecisionTreeRegressor(),\n",
     "    \"Random Forest Regressor\": RandomForestRegressor(),\n",
-    "    \"XGBRegressor\": XGBRegressor(), \n",
+    "    #\"XGBRegressor\": XGBRegressor(), \n",
     "    \"CatBoosting Regressor\": CatBoostRegressor(verbose=False),\n",
     "    \"AdaBoost Regressor\": AdaBoostRegressor()\n",
     "}\n",
@@ -698,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "id": "e0159e5f",
    "metadata": {},
    "outputs": [
@@ -736,22 +723,22 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Linear Regression</td>\n",
-       "      <td>0.880345</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>CatBoosting Regressor</td>\n",
-       "      <td>0.851632</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>AdaBoost Regressor</td>\n",
-       "      <td>0.849847</td>\n",
+       "      <td>0.880201</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>Random Forest Regressor</td>\n",
-       "      <td>0.847291</td>\n",
+       "      <td>0.851959</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>CatBoosting Regressor</td>\n",
+       "      <td>0.851632</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>AdaBoost Regressor</td>\n",
+       "      <td>0.851257</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -759,19 +746,14 @@
        "      <td>0.825320</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>XGBRegressor</td>\n",
-       "      <td>0.821589</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>K-Neighbors Regressor</td>\n",
-       "      <td>0.783813</td>\n",
+       "      <td>0.783497</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Decision Tree</td>\n",
-       "      <td>0.760313</td>\n",
+       "      <td>0.752176</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -780,17 +762,16 @@
       "text/plain": [
        "                Model Name  R2_Score\n",
        "2                    Ridge  0.880593\n",
-       "0        Linear Regression  0.880345\n",
-       "7    CatBoosting Regressor  0.851632\n",
-       "8       AdaBoost Regressor  0.849847\n",
-       "5  Random Forest Regressor  0.847291\n",
+       "0        Linear Regression  0.880201\n",
+       "5  Random Forest Regressor  0.851959\n",
+       "6    CatBoosting Regressor  0.851632\n",
+       "7       AdaBoost Regressor  0.851257\n",
        "1                    Lasso  0.825320\n",
-       "6             XGBRegressor  0.821589\n",
-       "3    K-Neighbors Regressor  0.783813\n",
-       "4            Decision Tree  0.760313"
+       "3    K-Neighbors Regressor  0.783497\n",
+       "4            Decision Tree  0.752176"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
