Data Transformation Done

--- a/notebook/2. MODEL TRAINING.ipynb
+++ b/notebook/2. MODEL TRAINING.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "b080dfb2",
    "metadata": {},
    "outputs": [],
@@ -1004,7 +1004,72 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3acf1fbc",
+   "id": "d78fe0ec",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##**TRYYY  artifacts\\Nutrition__Physical_Activity__and_Obesity_-_Behavioral_Risk_Factor_Surveillance_System.csv**\n",
+    "##########################################################################################################################\n",
+    "     #artifacts\\Nutrition__Physical_Activity__and_Obesity_-_Behavioral_Risk_Factor_Surveillance_System.csv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9637c6b6",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "bd339985",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('data/obesity_behavioral_risk_factor.csv')\n",
+    "#dff=pd.read_csv('obesity_behavioral_risk_factor.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "05c92cc2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['YearStart', 'YearEnd', 'LocationAbbr', 'LocationDesc', 'Datasource',\n",
+       "       'Class', 'Topic', 'Question', 'Data_Value_Unit', 'Data_Value_Type',\n",
+       "       'Data_Value', 'Data_Value_Alt', 'Data_Value_Footnote_Symbol',\n",
+       "       'Data_Value_Footnote', 'Low_Confidence_Limit', 'High_Confidence_Limit ',\n",
+       "       'Sample_Size', 'Total', 'Age(years)', 'Education', 'Gender', 'Income',\n",
+       "       'Race/Ethnicity', 'GeoLocation', 'ClassID', 'TopicID', 'QuestionID',\n",
+       "       'DataValueTypeID', 'LocationID', 'StratificationCategory1',\n",
+       "       'Stratification1', 'StratificationCategoryId1', 'StratificationID1'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4fdeb298",
    "metadata": {},
    "outputs": [],
    "source": []
